Bug 57423 - PDF: "Description" and "Title/Text Alternative" is only PDF-exported for Images, but not for Shapes, Formula, Frames, and OLE Objects
Summary: PDF: "Description" and "Title/Text Alternative" is only PDF-exported for Imag...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
3.6.3.2 release
Hardware: Other All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: BSA target:7.5.0 target:7.4.4 target:...
Keywords: accessibility, filter:pdf
: 143044 149058 (view as bug list)
Depends on:
Blocks: PDF-Export PDF-Accessibility 149130
  Show dependency treegraph
 
Reported: 2012-11-22 18:06 UTC by funke.holger
Modified: 2023-09-18 11:46 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
File that demonstrates the effect when exported as PDF (40.12 KB, application/vnd.oasis.opendocument.text)
2012-11-22 18:06 UTC, funke.holger
Details
Exported PDF with missing description of OLE object (48.53 KB, application/pdf)
2012-11-22 18:10 UTC, funke.holger
Details
The example file exported to PDF in PAC tool (113.57 KB, image/png)
2023-01-18 17:58 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description funke.holger 2012-11-22 18:06:38 UTC
Created attachment 70443 [details]
File that demonstrates the effect when exported as PDF

Problem description: 
In an exported PDF the description of an embedded OLE object is missing. Imported graphics as JPG or PNG view this description, also known as alternative text, are viewing this description. But using an OLE object created e.g. with Draw don't view their description. See attached file for an example.

Steps to reproduce:
1. Create new document
2. Insert new Object, OLE Object, choose e.g. Libre Draw
3. Draw an image
4. Close Draw
5. Right mouse click on new image, choose "Description" in context menu
6. Write some description into text field
7. Export document as PDF
8. Open exported PDF with Acrobat reader
9. Focus image with mouse pointer

Current behavior:
Description of image is not viewed in exported PDF.


Expected behavior:
Description of image should be viewed as hover text when mouse pointer on it.

Platform (if different from the browser): 
              
Browser: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_8_2) AppleWebKit/536.26.17 (KHTML, like Gecko) Version/6.0.2 Safari/536.26.17
Comment 1 funke.holger 2012-11-22 18:10:02 UTC
Created attachment 70444 [details]
Exported PDF with missing description of OLE object
Comment 2 A (Andy) 2013-04-19 21:14:26 UTC
reproducible with LO 4.0.2.2 (Win7 Home, 64bit)

Note: To reproduce it you need to select TAGGED PDF in the tab GENERAL of the menu FILE -> EXPORT AS PDF.
Comment 3 QA Administrators 2015-04-19 03:23:49 UTC Comment hidden (noise)
Comment 4 QA Administrators 2019-05-14 02:57:37 UTC Comment hidden (noise)
Comment 5 QA Administrators 2021-05-14 04:11:20 UTC Comment hidden (noise)
Comment 6 sdc.blanco 2022-05-10 00:13:50 UTC
New STR (because OP is ambiguous)

1. New Writer document.
2. Insert - Shape - Basic Shape - Rectangle
3. Insert - Shape - Line - Line
4. Insert - Shape - Line - Freeform Line
5. Insert - Object - Formula Object
6. Insert - Image , then (choose an image)
7. Insert - Chart 
8. For each of the inserted objects, select, Format > Description, enter data for "Title" and "Description"
9. File > Export as > Export as PDF 
10. Check "Universal Accessibility", then click "Export"
11. View exported PDF file in Adobe Reader

Actual: In PDF file, cursor placed over image with mouse shows both Title and Description (OK), but for all Drawing Objects and Formula (OLE Object), Title and Description are not shown (NOK, as indicated in the OP).

Tested with:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 4ea44fdb19e568093ab1e0549c3ffa33296a486b
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: da-DK (da_DK); UI: en-US
Calc: CL
Comment 7 sdc.blanco 2022-05-13 01:14:45 UTC
*** Bug 149058 has been marked as a duplicate of this bug. ***
Comment 8 sdc.blanco 2022-05-13 01:30:52 UTC
The duplicate in comment 7 has an attachment that conducts many of the same tests as described in comment 6, so that bug was made a duplicate of this bug.

Meanwhile, the OP is ambiguous, because it seems to refer to Alternative Text and Description as the same thing, but the tests in comment 7 evaluate both Text Alternative and Description. => Bug summary is expanded. 

The expectation is that both Text Alternative (bug 148941) and Description will be shown in exported PDF (if they are available), for any embedded or linked object.

But it seems relevant to ask explicitly if that is the intended/expected behavior.
Comment 9 Xisco Faulí 2022-05-19 11:48:34 UTC
*** Bug 101800 has been marked as a duplicate of this bug. ***
Comment 10 Xisco Faulí 2022-05-19 15:05:59 UTC
Armin did some work in this area in 2840352ba56a212d191cc16e08378c87672d7b73
Comment 11 Commit Notification 2022-11-25 10:47:36 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/78681cd0829dcb6a73690e1a63ae3808d297677a

tdf#57423 drawinglayer: PDF/UA export: more Alt texts for SdrObjects

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2022-11-25 10:48:46 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/122b4264d23df8b11419839ba700b88c4f936a6c

tdf#57423 sw: PDF/UA export: Alt texts for SwNoTextNode

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Michael Stahl 2022-11-25 11:24:49 UTC
this should be fixed now in Writer for:

* any SdrObject with Default "inventor" - not sure what the others are but they lack a structure element(StructureTagPrimitive2D)...
* Writer images, embedded objects - these should obviously have alt text
* Writer text frames - less obvious but you can set the alt text via Format->Description, while it's missing in the main properties dialog

hopefully SdrObjects in other applications also get Alt text since the StructureTagPrimitive2D should be produced for these with the fix for bug 135638, haven't tested that...
Comment 14 Commit Notification 2022-12-03 21:02:05 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/2b3fc2a2603f54e60ad16e81d112d30b204e9796

tdf#57423 drawinglayer: PDF/UA export: more Alt texts for SdrObjects

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2022-12-03 21:03:15 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/0d59eebe858d0d3e5d2260691f245940757deacd

tdf#57423 sw: PDF/UA export: Alt texts for SwNoTextNode

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Gabor Kelemen (Collabora) 2023-01-18 17:58:40 UTC
Created attachment 184762 [details]
The example file exported to PDF in PAC tool

Verified in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f1830bff71847a9c17715cff52383956719847fe
CPU threads: 14; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: threaded

Now there is no more "Alternative text missing for "Figure" structure element" error reported.

There is only a warning
Possibly inappropriate use of a "Figure" structure element
still.
Comment 17 devseppala 2023-05-12 09:27:32 UTC
Did this enhancement affect how the alternative text is placed in to the PDF structure. I'm asking, because after upgrading from LO 7.4.3 to version 7.4.4, the Adobe Acrobat Accessibility checker reports "Associated with content" errors with images, in the alternative text check section. In my view, this enhancement is the most relevant alt-text change in the 7.4.4. version. See further details in my bug 155190 report.

I would greatly appreciate you looking into this issue.
Comment 18 Commit Notification 2023-05-13 11:25:21 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5351b8789805154219fe57b92b41b17c0e0cd765

related tdf#57423: make a11y checker accept image description too

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 devseppala 2023-05-15 10:10:21 UTC
If the last change was a respose to my preceding comment, this change did not unfortunately solve it. 

I did some more digging and realized that Acrobat tag structure viewer shows a small difference in the tag structure of the exported PDF files.

LO 7.4.3 PDF export:
<Document>
   <P>
      <Div>
         <Caption>
            Text: Figure 
            Text: 1
            Text: : Picture of apples
            <Figure>
               Image (10): w:226 h:226  <-- Missing after upgrade LO 7.4.4 !!

LO 7.4.4 and later PDF exports shows the same structure, except the last line is missing!!

I also tried the example files with a tool called ngPDF (https://ngpdf.com/loadFile), which can transform tagged pdf documents to html. This tool correctly  transformed the LO 7.4.3 exported pdf file to html. However, when I tried it with a LO 7.4.4 exported PDF file, the resulting html file was missing the picture. I think this implies that there is indeed some problem in how the picture is attached to the tag structure and it is not just a problem with Acrobat.

See further details in my bug 155190 report
Comment 20 Michael Stahl 2023-09-18 11:46:45 UTC
*** Bug 143044 has been marked as a duplicate of this bug. ***